--- a/coding_interview_pt1/index.html
+++ b/coding_interview_pt1/index.html
@@ -30,6 +30,7 @@
         
       </div>
     </div>
+<div id="op"></div>
   </div>
   <script type="text/javascript" src="team.js"></script>
 </body>
